reworked server guideline checks and results